--- a/README.html
+++ b/README.html
@@ -40,7 +40,7 @@ body {
 <h3 id="citation">Citation</h3>
 <p>Please cite this compendium as:</p>
 <blockquote>
-<p>Knitter, Daniel (2017). <em>moin -- Modeling Spatial Interactions</em>. Accessed 10 Aug 2017. Online at <a href="https://doi.org/xxx/xxx" class="uri">https://doi.org/xxx/xxx</a></p>
+<p>Knitter, Daniel et al. (2017). <em>moin -- Modeling Spatial Interactions</em>. Accessed 22 Aug 2017. Online at <a href="https://doi.org/xxx/xxx" class="uri">https://doi.org/xxx/xxx</a></p>
 </blockquote>
 <h3 id="installation">Installation</h3>
 <p>You can install moin from github with:</p>
